--- a/Octoslots/Octoslots.csproj
+++ b/Octoslots/Octoslots.csproj
@@ -85,11 +85,11 @@
     </Compile>
     <Compile Include="FontConfig.cs" />
     <Compile Include="Configuration.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Main.Designer.cs">
+      <DependentUpon>Main.cs</DependentUpon>
     </Compile>
     <Compile Include="SinglePlayerForm.cs">
       <SubType>Form</SubType>
@@ -120,11 +120,11 @@
     <EmbeddedResource Include="Checker.resx">
       <DependentUpon>Checker.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.ja.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Main.ja.resx">
+      <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Main.resx">
+      <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
